--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -12,7 +12,7 @@
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to 'Dev', pages_dev_path %></li>
-        <li><%= link_to 'Home', pages_overview_path %></li>
+        <li><%= link_to 'Overview', pages_overview_path %></li>
       </ul>
     </div>
   </div>
