edit transcode model

--- a/app/views/transcodes/_form.html.erb
+++ b/app/views/transcodes/_form.html.erb
@@ -27,6 +27,10 @@
     <%= f.label :outfile_option %><br>
     <%= f.text_field :outfile_option %>
   </div>
+  <div class="field">
+    <%= f.label :extention %><br>
+    <%= f.text_field :extention %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
