--- a/app/views/transcodes/show.html.erb
+++ b/app/views/transcodes/show.html.erb
@@ -20,5 +20,10 @@
   <%= @transcode.outfile_option %>
 </p>
 
+<p>
+  <strong>Extention:</strong>
+  <%= @transcode.extention %>
+</p>
+
 <%= link_to 'Edit', edit_transcode_path(@transcode) %> |
 <%= link_to 'Back', transcodes_path %>
