--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -11,8 +11,7 @@
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to 'Dev', pages_dev_path %></li>
-        <li><%= link_to 'Overview', pages_overview_path %></li>
+        <li><%= link_to pages_dev_path do %>Menu<% end %></li>
       </ul>
     </div>
   </div>
