--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
   </head>
-  <body data-no-turbolink>
+  <body>
     <%= render 'layouts/navbar' %>
     <div class="content-body">
       <%= yield %>
